Using random forest classifier

--- a/Model_build.ipynb
+++ b/Model_build.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Model_build.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMqLRiOLj40a9yg1YAVxEXZ",
+      "authorship_tag": "ABX9TyOqw2lNVfvHzHaJMbAINL51",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 38,
       "metadata": {
         "id": "1cxLmFgJUMLq"
       },
@@ -42,6 +42,7 @@
         "from sklearn.metrics import recall_score\n",
         "from sklearn.metrics import confusion_matrix\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
         "from imblearn.combine import SMOTEENN"
       ]
     },
@@ -938,6 +939,402 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The above precision recall are not good enough. Since I trained the model on imbalanced dataset. Training the model after balancing...."
+      ],
+      "metadata": {
+        "id": "ItyAQko3UYZg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "smt=SMOTEENN()\n",
+        "x_bal,y_bal=smt.fit_resample(x,y)"
+      ],
+      "metadata": {
+        "id": "RQcFRpBcUtr8"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "xb_train,xb_test,yb_train,yb_test=train_test_split(x_bal,y_bal,test_size=0.2)"
+      ],
+      "metadata": {
+        "id": "6sFhhX8rU71A"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(xb_train.shape,xb_test.shape,yb_train.shape,yb_test.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7EVv_AeNW_jf",
+        "outputId": "c65640bc-2d49-4c52-e6e5-ca46bbd5a0d8"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(4613, 44) (1154, 44) (4613,) (1154,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "smot_dt=DecisionTreeClassifier(criterion='gini',random_state=100,max_depth=6,min_samples_leaf=8)\n",
+        "smot_dt.fit(xb_train,yb_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2qlpJ483WUMu",
+        "outputId": "5ceea0db-18ba-4bb7-ad0e-832edfe4c0e8"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DecisionTreeClassifier(max_depth=6, min_samples_leaf=8, random_state=100)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "smot_predic=smot_dt.predict(xb_test)\n",
+        "model_sc=smot_dt.score(xb_test,yb_test)\n",
+        "print(model_sc)\n",
+        "print(classification_report(yb_test,smot_predic))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "suKFy9e7WyJ7",
+        "outputId": "06722bdd-444b-41c5-c129-7dd69d46f967"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9324090121317158\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.91      0.94      0.92       510\n",
+            "           1       0.95      0.93      0.94       644\n",
+            "\n",
+            "    accuracy                           0.93      1154\n",
+            "   macro avg       0.93      0.93      0.93      1154\n",
+            "weighted avg       0.93      0.93      0.93      1154\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(metrics.confusion_matrix(yb_test,smot_predic))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iAFXBp3aYhXU",
+        "outputId": "f8c5c570-e89f-4923-88de-0b35e6989d5d"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[478  32]\n",
+            " [ 46 598]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "So after balancing data, model performs better"
+      ],
+      "metadata": {
+        "id": "VTHFy4P0Z6rV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Random Forest Classifier"
+      ],
+      "metadata": {
+        "id": "cubbq8OXaPRX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rf_mod=RandomForestClassifier(n_estimators=100,criterion='gini',random_state=100,max_depth=6,min_samples_leaf=8)\n",
+        "rf_mod.fit(x_train,y_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GsQ5ouzLaRu5",
+        "outputId": "ded428e7-00b2-4f71-891c-6b3f7f277d66"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier(max_depth=6, min_samples_leaf=8, random_state=100)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "res=rf_mod.predict(x_test)"
+      ],
+      "metadata": {
+        "id": "ka7cUlaVbNKj"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(rf_mod.score(x_test,y_test))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N4rOY5-BbVb7",
+        "outputId": "ea30e176-24bf-4aa7-d305-1c93586d3ff5"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.7867803837953091\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(classification_report(y_test,res,labels=[0,1]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sg_IFqwEbfv3",
+        "outputId": "f0152bf9-4d8a-4b1d-9017-9e0c4759a9f3"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.81      0.91      0.86      1006\n",
+            "           1       0.68      0.47      0.56       401\n",
+            "\n",
+            "    accuracy                           0.79      1407\n",
+            "   macro avg       0.75      0.69      0.71      1407\n",
+            "weighted avg       0.78      0.79      0.77      1407\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Checking whether model improves after balancing the dataset"
+      ],
+      "metadata": {
+        "id": "NsQq85Acb3Lq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "smt=SMOTEENN()\n",
+        "x1_bal,y1_bal=smt.fit_resample(x,y)"
+      ],
+      "metadata": {
+        "id": "THeEab9rb0a_"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "xb1_train,xb1_test,yb1_train,yb1_test=train_test_split(x1_bal,y1_bal,test_size=0.2)\n",
+        "print(xb_train.shape,xb_test.shape,yb_train.shape,yb_test.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bnKu3fiQcW42",
+        "outputId": "c6c012a5-4e96-4b21-9600-889f08393179"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(4707, 44) (1177, 44) (4707,) (1177,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rf_mod.fit(xb1_train,yb1_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ctAk2meucgKj",
+        "outputId": "0dfeb6e3-2a03-4d1f-c6d0-6e3bdce07f2f"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier(max_depth=6, min_samples_leaf=8, random_state=100)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "res1=rf_mod.predict(xb1_test)"
+      ],
+      "metadata": {
+        "id": "VsP5ytuodBpi"
+      },
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(rf_mod.score(xb1_test,yb1_test))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J2Pbx_QDdW0o",
+        "outputId": "c5dc4720-f651-4f4a-e62b-fb66c3fb8871"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9253218884120171\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(metrics.classification_report(yb1_test,res1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_vxqRTJ1deuO",
+        "outputId": "0389bf28-1629-4702-846d-9eae2ef2fb47"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.94      0.89      0.91       513\n",
+            "           1       0.91      0.96      0.93       652\n",
+            "\n",
+            "    accuracy                           0.93      1165\n",
+            "   macro avg       0.93      0.92      0.92      1165\n",
+            "weighted avg       0.93      0.93      0.93      1165\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Model improves after balancing dataset"
+      ],
+      "metadata": {
+        "id": "gjRUm6G7d291"
+      }
     }
   ]
 }
